<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="cangjie">倉</string>
    <string name="cangjie_full">倉頡</string>
    <string name="language_mode">預設語言</string>
    <string name="language_mode_summary">選擇英文或中文, 為首選的顯示的鍵盤</string>
    <string name="cangjie_mode">中文輸入法</string>
    <string name="prefs_cangjie_sorting_method_key">倉頡排序方法</string>
    <string name="prefs_cangjie_sorting_method_summary_key">選擇 - 是 : 先排字碼數, 後排常用次序 (不支援倉頡 Auto-Correction), 否 : 只排常用次序 (除了一個倉頡碼字)</string>
    <string name="candidate_popup">選字行 Popup 視窗</string>
    <string name="candidate_popup_summary">選擇 - 使用 Popup 視窗 , 否 - 使用撗向選字</string>
    <string name="cangjie_autocorrection_mode">倉頡 Auto Correction</string>
    <string name="prefs_cangjie_english_key">倉頡速成英文鍵</string>
    <string name="prefs_clear_often_used_title">清洗常用字記錄</string>
    <string name="prefs_clear_often_used_summary">如果常用字有問題，請按這個選項，下次鍵盤開啟時，將會重設．</string>
    <string name="prefs_keyboard_portrait_height">鍵盤直向高度 (總螢幕高度百份比)</string>
    <string name="prefs_keyboard_landscape_height">鍵盤橫向高度 (總螢幕高度百份比)</string>
    <string name="height_default">預設</string>
    <string name="prefs_candidate_button">選字按鍵位置</string>
    <string name="prefs_candidate_button_summary">選擇, 是: 左邊, 否: 右邊</string>
    <string name="prefs_always_show_english_keyboard">先顯示英文鍵盤</string>
    <string name="prefs_show_candidate_separator">顯示選字頁分隔線?</string>
    <string name="prefs_always_show_suggestions">永遠顯示選字行(英文)</string>
    <string name="pref_normal_character_color">非常用字顏色</string>
    <string name="pref_frequent_character_color">常用字顏色</string>
    <string name="pref_keyboard_key_normal_color">鍵盤主要字顏色</string>
    <string name="pref_keyboard_key_hint_color">鍵盤副字顏色</string>
    <string name="prefs_comma_exchange">逗號與點互換</string>
    <string name="prefs_seek_enable">使用</string>
    <string name="prefs_swipe_cursor_movement">光標移動 (需用兩隻手指)</string>
    <string name="prefs_auto_learning_phrase">開啟自動學習關聯字</string>
    <string name="aosp_android_keyboard_ime_name">"Jellybean Cangjie"</string>
    <string name="english_ime_input_options">Input options</string>
    <string name="english_ime_research_log">Research Log Commands</string>
    <string name="aosp_spell_checker_service_name">Android spell checker (AOSP)</string>
    <string name="use_contacts_for_spellchecking_option_title">Look up contact names</string>
    <string name="use_contacts_for_spellchecking_option_summary">Spell checker uses entries from your contact list</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="general_category">General</string>
    <string name="correction_category">Text correction</string>
    <string name="gesture_typing_category">Gesture typing</string>
    <string name="misc_category">Other options</string>
    <string name="chinese_category">中文</string>
    <string name="opensource_category">Open Source Reference</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="advanced_settings_summary">Options for experts</string>
    <string name="include_other_imes_in_language_switch_list">Switch to other input methods</string>
    <string name="include_other_imes_in_language_switch_list_summary">Language switch key covers other input methods too</string>
    <string name="show_language_switch_key">Language switch key</string>
    <string name="show_language_switch_key_summary">Show when multiple input languages are enabled</string>
    <string name="key_preview_popup_dismiss_delay">Key popup dismiss delay</string>
    <string name="key_preview_popup_dismiss_no_delay">No delay</string>
    <string name="key_preview_popup_dismiss_default_delay">Default</string>
    <string name="use_contacts_dict">Suggest Contact names</string>
    <string name="use_contacts_dict_summary">Use names from Contacts for suggestions and corrections</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="configure_dictionaries_title">Add-on dictionaries</string>
    <string name="main_dictionary">Main dictionary</string>
    <string name="prefs_show_suggestions">Show correction suggestions</string>
    <string name="prefs_show_suggestions_summary">Display suggested words while typing</string>
    <string name="prefs_suggestion_visibility_show_name">Always show</string>
    <string name="prefs_suggestion_visibility_show_only_portrait_name">Show in portrait mode</string>
    <string name="prefs_suggestion_visibility_hide_name">Always hide</string>
    <string name="auto_correction">Auto-correction</string>
    <string name="auto_correction_summary">Spacebar and punctuation automatically correct mistyped words</string>
    <string name="auto_correction_threshold_mode_off">Off</string>
    <string name="auto_correction_threshold_mode_modest">Modest</string>
    <string name="auto_correction_threshold_mode_aggeressive">Aggressive</string>
    <string name="auto_correction_threshold_mode_very_aggeressive">Very aggressive</string>
    <string name="bigram_prediction">Next-word suggestions</string>
    <string name="bigram_prediction_summary">Use the previous word in making suggestions</string>
    <string name="gesture_input">Enable gesture typing</string>
    <string name="gesture_input_summary">Input a word by sliding through the letters</string>
    <string name="gesture_preview_trail">Show gesture trail</string>
    <string name="gesture_floating_preview_text">Dynamic floating preview</string>
    <string name="gesture_floating_preview_text_summary">See the suggested word while gesturing</string>
    <string name="added_word"><xliff:g id="word">%s</xliff:g> : Saved</string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_previous_key">Prev</string>
    <string name="label_done_key">Done</string>
    <string name="label_send_key">Send</string>
    <string name="label_to_alpha_key">ABC</string>
    <string name="label_to_symbol_key">\?123</string>
    <string name="label_to_full_symbols_key">全</string>
    <string name="label_to_symbol_with_microphone_key">123</string>
    <string name="label_pause_key">Pause</string>
    <string name="label_wait_key">Wait</string>
    <string name="spoken_use_headphones">Plug in a headset to hear password keys spoken aloud.</string>
    <string name="spoken_current_text_is">Current text is "%s"</string>
    <string name="spoken_no_text_entered">No text entered</string>
    <string name="spoken_description_unknown">Key code %d</string>
    <string name="spoken_description_shift">Shift</string>
    <string name="spoken_description_shift_shifted">Shift on (tap to disable)</string>
    <string name="spoken_description_caps_lock">Caps lock on (tap to disable)</string>
    <string name="spoken_description_delete">Delete</string>
    <string name="spoken_description_to_symbol">Symbols</string>
    <string name="spoken_description_to_alpha">Letters</string>
    <string name="spoken_description_to_numeric">Numbers</string>
    <string name="spoken_description_settings">Settings</string>
    <string name="spoken_description_tab">Tab</string>
    <string name="spoken_description_space">Space</string>
    <string name="spoken_description_mic">Voice input</string>
    <string name="spoken_description_smiley">Smiley face</string>
    <string name="spoken_description_return">Return</string>
    <string name="spoken_description_search">Search</string>
    <string name="spoken_description_dot">Dot</string>
    <string name="spoken_description_language_switch">Switch language</string>
    <string name="spoken_description_action_next">Next</string>
    <string name="spoken_description_action_previous">Previous</string>
    <string name="spoken_description_shiftmode_on">Shift enabled</string>
    <string name="spoken_description_shiftmode_locked">Caps lock enabled</string>
    <string name="spoken_description_shiftmode_off">Shift disabled</string>
    <string name="spoken_description_mode_symbol">Symbols mode</string>
    <string name="spoken_description_mode_alpha">Letters mode</string>
    <string name="spoken_description_mode_phone">Phone mode</string>
    <string name="spoken_description_mode_phone_shift">Phone symbols mode</string>
    <string name="voice_input">Voice input key</string>
    <string name="voice_input_modes_main_keyboard">On main keyboard</string>
    <string name="voice_input_modes_symbols_keyboard">On symbols keyboard</string>
    <string name="voice_input_modes_off">Off</string>
    <string name="voice_input_modes_summary_main_keyboard">Mic on main keyboard</string>
    <string name="voice_input_modes_summary_symbols_keyboard">Mic on symbols keyboard</string>
    <string name="voice_input_modes_summary_off">Voice input is disabled</string>
    <string name="configure_input_method">Configure input methods</string>
    <string name="language_selection_title">Input languages</string>
    <string name="research_do_not_log_this_session" translatable="false">Suspend logging</string>
    <string name="research_enable_session_logging" translatable="false">Enable logging</string>
    <string name="research_notify_session_log_deleting" translatable="false">Deleting session log</string>
    <string name="research_notify_logging_suspended" translatable="false">Logging temporarily suspended.  To disable permanently, go to Android Keyboard Settings</string>
    <string name="research_notify_session_log_not_deleted" translatable="false">Session log NOT deleted</string>
    <string name="research_notify_session_logging_enabled" translatable="false">Session logging enabled</string>
    <string name="research_feedback_menu_option" translatable="false">Send feedback</string>
    <string name="research_feedback_dialog_title" translatable="false">Send feedback</string>
    <string name="research_feedback_include_history_label" translatable="false">Include last <xliff:g id="word">%d</xliff:g> words entered</string>
    <string name="research_feedback_hint" translatable="false">Enter your feedback here.</string>
    <string name="research_feedback_send" translatable="false">Send</string>
    <string name="research_feedback_cancel" translatable="false">Cancel</string>
    <string name="research_please_exit_feedback_form" translatable="false">Please exit the feedback dialog to access the research log menu</string>
    <string name="research_splash_title" translatable="false">Warning</string>
    <string name="research_logging_disabled" translatable="false">Logging Disabled</string>
    <string name="research_log_uploader_name" translatable="false">Research Uploader Service</string>
    <string name="select_language">Input languages</string>
    <string name="hint_add_to_dictionary">Touch again to save</string>
    <string name="has_dictionary">Dictionary available</string>
    <string name="prefs_enable_log">Enable user feedback</string>
    <string name="prefs_description_log">Help improve this input method editor by automatically sending usage statistics and crash reports to Google.</string>
    <string name="keyboard_layout">Keyboard theme</string>
    <string name="subtype_en_GB">English (UK)</string>
    <string name="subtype_en_US">English (US)</string>
    <string name="subtype_with_layout_en_GB">English (UK) (<xliff:g id="layout">%s</xliff:g>)</string>
    <string name="subtype_no_language_qwerty">No language (QWERTY)</string>
    <string name="prefs_keypress_vibration_duration_settings">Keypress vibration duration settings</string>
    <string name="prefs_keypress_sound_volume_settings">Keypress sound volume settings</string>
    <string name="fullsymbol_chinesekeyboard">在中文鍵盤使用全形符號</string>
    <string name="prefs_candidate_font_size">選字行/頁字型大小</string>
</resources>