<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://flatworld.eu"
    android:title="@string/english_ime_settings"
    android:key="english_ime_settings">
    <PreferenceCategory
        android:title="@string/chinese_category"
        android:key="chinese_settings">
        <ListPreference
            android:key="language_mode"
            android:title="@string/language_mode"
            android:summary="@string/language_mode_summary"
            android:persistent="true"
    	    android:defaultValue="0"
	    android:entries="@array/langArray"
	    android:entryValues="@array/langValues" />
        <ListPreference
            android:key="cangjie_mode"
            android:title="@string/cangjie_mode"
            android:persistent="true"
    	    android:defaultValue="0"
	    android:entries="@array/listArray"
	    android:entryValues="@array/listValues" />
	<CheckBoxPreference
            android:key="cangjie_english_key"
            android:title="@string/prefs_cangjie_english_key"
	    android:defaultValue="false"
            android:persistent="true"/>
	<CheckBoxPreference
            android:key="cangjie_sorting_method"
            android:title="@string/prefs_cangjie_sorting_method_key"
            android:summary="@string/prefs_cangjie_sorting_method_summary_key"
	    android:defaultValue="true"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="cangjie_autocorrection_mode"
            android:title="@string/cangjie_autocorrection_mode"
            android:persistent="true"
    	    android:defaultValue="false" />
	<CheckBoxPreference
            android:key="clear_often_used"
            android:title="@string/prefs_clear_often_used_title"
            android:summary="@string/prefs_clear_often_used_summary"
	    android:defaultValue="false"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="fullsymbol_chinesekeyboard"
            android:title="@string/fullsymbol_chinesekeyboard"
            android:defaultValue="true"
            android:persistent="true" />
        <CheckBoxPreference
            android:key="candidate_popup"
            android:title="@string/candidate_popup"
            android:summary="@string/candidate_popup_summary"
            android:defaultValue="true"
            android:persistent="true" />
	<CheckBoxPreference
            android:key="candidate_button"
            android:title="@string/prefs_candidate_button"
            android:summary="@string/prefs_candidate_button_summary"
	    android:defaultValue="false"
            android:persistent="true"/>
	<CheckBoxPreference
            android:key="always_show_english_keyboard"
            android:title="@string/prefs_always_show_english_keyboard"
	    android:defaultValue="false"
            android:persistent="true"/>
        <com.diycircuits.widgets.SeekBarPreference
            android:defaultValue="1000"
            android:key="candidate_font_size"
            android:max="2000"
            app:min="500"
            android:title="@string/prefs_candidate_font_size" />
	<CheckBoxPreference
            android:key="show_candidate_separator"
            android:title="@string/prefs_show_candidate_separator"
	    android:defaultValue="true"
            android:persistent="true"/>
	<CheckBoxPreference
            android:key="always_show_suggestions"
            android:title="@string/prefs_always_show_suggestions"
	    android:defaultValue="true"
            android:persistent="true"/>
	<net.margaritov.preference.colorpicker.ColorPickerPreference
	    android:key="normal_character_color"
	    android:title="@string/pref_normal_character_color"
	    android:defaultValue="@integer/COLOR_NORMAL"
	    alphaSlider="false"
	    />
	<net.margaritov.preference.colorpicker.ColorPickerPreference
	    android:key="frequent_character_color"
	    android:title="@string/pref_frequent_character_color"
	    android:defaultValue="@integer/COLOR_FREQUENT"
	    alphaSlider="false"
	    />
	<net.margaritov.preference.colorpicker.ColorPickerPreference
	    android:key="keyboard_key_normal_color"
	    android:title="@string/pref_keyboard_key_normal_color"
	    android:defaultValue="@integer/COLOR_NORMAL_KEY"
	    alphaSlider="false"
	    />
	<net.margaritov.preference.colorpicker.ColorPickerPreference
	    android:key="keyboard_key_hint_color"
	    android:title="@string/pref_keyboard_key_hint_color"
	    android:defaultValue="@integer/COLOR_HINT_KEY"
	    alphaSlider="true"
	    />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/general_category"
        android:key="general_settings">
        <CheckBoxPreference
            android:key="auto_cap"
            android:title="@string/auto_cap"
            android:summary="@string/auto_cap_summary"
            android:persistent="true"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="vibrate_on"
            android:title="@string/vibrate_on_keypress"
            android:defaultValue="@bool/config_default_vibration_enabled"
            android:persistent="true" />
	<PreferenceScreen
            android:key="pref_vibration_duration_settings"
            android:title="@string/prefs_keypress_vibration_duration_settings"
            android:summary="5ms"/>
        <CheckBoxPreference
            android:key="sound_on"
            android:title="@string/sound_on_keypress"
            android:defaultValue="@bool/config_default_sound_enabled"
            android:persistent="true" />
	<PreferenceScreen
            android:key="pref_keypress_sound_volume"
            android:title="@string/prefs_keypress_sound_volume_settings"
            android:summary="50"/>
        <CheckBoxPreference
            android:key="popup_on"
            android:title="@string/popup_on_keypress"
            android:persistent="true"
            android:defaultValue="@bool/config_default_popup_preview" />
        <ListPreference
            android:key="voice_mode"
            android:title="@string/voice_input"
            android:persistent="true"
            android:entryValues="@array/voice_input_modes_values"
            android:entries="@array/voice_input_modes"
            android:defaultValue="@string/voice_mode_main" />
        <com.diycircuits.widgets.SeekBarPreference
            android:defaultValue="618"
            android:key="portrait_height"
            app:min="300"
            android:max="800"
            android:title="@string/prefs_keyboard_portrait_height" />
        <com.diycircuits.widgets.SeekBarPreference
            android:defaultValue="460"
            android:key="landscape_height"
            app:min="300"
            android:max="800"
            android:title="@string/prefs_keyboard_landscape_height" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/correction_category"
        android:key="correction_settings">
      <!--
        <PreferenceScreen
            android:key="configure_dictionaries_key"
            android:title="@string/configure_dictionaries_title">
           <intent
              android:action="android.intent.action.MAIN"
              android:targetPackage="@string/dictionary_pack_package_name"
              android:targetClass="@string/dictionary_pack_settings_activity" />
        </PreferenceScreen>
	-->
        <ListPreference
            android:key="auto_correction_threshold"
            android:title="@string/auto_correction"
            android:summary="@string/auto_correction_summary"
            android:persistent="true"
            android:entryValues="@array/auto_correction_threshold_mode_indexes"
            android:entries="@array/auto_correction_threshold_modes"
            android:defaultValue="@string/auto_correction_threshold_mode_index_modest" />
        <ListPreference
            android:key="show_suggestions_setting"
            android:summary="@string/prefs_show_suggestions_summary"
            android:title="@string/prefs_show_suggestions"
            android:persistent="true"
            android:entryValues="@array/prefs_suggestion_visibility_values"
            android:entries="@array/prefs_suggestion_visibilities"
            android:defaultValue="@string/prefs_suggestion_visibility_default_value" />
    </PreferenceCategory>
    <!--
    <PreferenceCategory
        android:title="@string/gesture_typing_category"
        android:key="gesture_typing_settings">
        <CheckBoxPreference
            android:key="gesture_input"
            android:title="@string/gesture_input"
            android:summary="@string/gesture_input_summary"
            android:persistent="true"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_gesture_floating_preview_text"
            android:title="@string/gesture_floating_preview_text"
            android:summary="@string/gesture_floating_preview_text_summary"
            android:persistent="true"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_gesture_preview_trail"
            android:title="@string/gesture_preview_trail"
            android:persistent="true"
            android:defaultValue="true" />
    </PreferenceCategory>
    -->
    <PreferenceCategory
        android:title="@string/misc_category"
        android:key="misc_settings">
        <CheckBoxPreference
            android:key="next_word_prediction"
            android:title="@string/bigram_prediction"
            android:summary="@string/bigram_prediction_summary"
            android:persistent="true"
            android:defaultValue="true" />
        <PreferenceScreen
            android:key="pref_advanced_settings"
            android:title="@string/advanced_settings"
            android:summary="@string/advanced_settings_summary">
	    <!--
            <CheckBoxPreference
                android:key="pref_key_use_contacts_dict"
                android:title="@string/use_contacts_dict"
                android:summary="@string/use_contacts_dict_summary"
                android:persistent="true"
                android:defaultValue="true" />
            <CheckBoxPreference
                android:key="pref_show_language_switch_key"
                android:title="@string/show_language_switch_key"
                android:summary="@string/show_language_switch_key_summary"
                android:persistent="true"
                android:defaultValue="true" />
            <CheckBoxPreference
                android:key="pref_include_other_imes_in_language_switch_list"
                android:title="@string/include_other_imes_in_language_switch_list"
                android:summary="@string/include_other_imes_in_language_switch_list_summary"
                android:persistent="true"
                android:defaultValue="false" />
            <PreferenceScreen
                android:fragment="com.diycircuits.inputmethod.latin.AdditionalSubtypeSettings"
                android:key="custom_input_styles"
                android:title="@string/custom_input_styles_title" />
	    -->
            <!-- Values for popup dismiss delay are added programatically -->
            <ListPreference
                android:key="pref_key_preview_popup_dismiss_delay"
                android:title="@string/key_preview_popup_dismiss_delay" />
            <PreferenceScreen
                android:key="pref_vibration_duration_settings"
                android:title="@string/prefs_keypress_vibration_duration_settings"/>
            <PreferenceScreen
                android:key="pref_keypress_sound_volume"
                android:title="@string/prefs_keypress_sound_volume_settings" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/opensource_category"
        android:key="opensource_settings">
      <Preference
          android:key="visit"
          android:summary="http://github.com/hilarycheng"
          android:title="Visit developer website" />
      <Preference
          android:key="opensourcelicense"
          android:summary="http://www.gnu.org/licenses/gpl-2.0.html"
          android:title="Open Sources License" />
      <Preference
          android:key="iconlicense"
          android:summary="Thanks for Muthar Suggestion"
          android:title="Icon / Various Color Design" />
      <Preference
          android:key="cangjie3license"
          android:summary="https://github.com/definite/ibus-table-chinese/tree/master/tables/"
          android:title="Cangjie3, Quick Reference" />
      <Preference
          android:key="strokelicense"
          android:summary="Thanks for Ashin/Dreamlifer, http://maemo.org/packages/source/view/fremantle_extras-devel_free_source/strokeorder/0.6-1/"
          android:title="Stroke Reference" />
      <Preference
          android:key="seekbarreference"
          android:summary="http://www.flatworld.eu/slider/"
          android:title="SeekBar Source Reference" />
      <Preference
          android:key="horizontallistviewreference"
          android:summary="https://github.com/sephiroth74/HorizontalVariableListView/"
          android:title="Horizontal List View Reference" />
      <Preference
          android:key="colorpickerpreference"
          android:summary="https://github.com/attenzione/android-ColorPickerPreference"
          android:title="Android Color Picker Preference Reference" />
    </PreferenceCategory>
</PreferenceScreen>
