<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2008, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<!-- The attributes in this XML file provide configuration information -->
<!-- for the Input Method Manager. -->

<!-- Supported subtypes
    keyboard_locale: script_name/keyboard_layout_set[:keyboard_locale]
    af: Afrikaans/qwerty
    ar: Arabic/arabic
    be: Belarusian/east_slavic
    bg: Bulgarian/bulgarian
    bg: Bulgarian/bulgarian_bds
    ca: Catalan/spanish
    cs: Czech/qwertz
    da: Danish/nordic
    de: German/qwertz
    el: Greek/greek
    en_US: English United States/qwerty
    en_GB: English Great Britain/qwerty
    eo: Esperanto/spanish
    es: Spanish/spanish
    et: Estonian/nordic
    fa: Persian/arabic
    fi: Finnish/nordic
    fr: French/azerty
    fr_CA: French Canada/qwerty
    hi: Hindi/hindi
    hr: Croatian/qwertz
    hu: Hungarian/qwertz
    in: Indonesian/qwerty    # "id" is official language code of Indonesian.
    is: Icelandic/qwerty
    it: Italian/qwerty
    iw: Hebrew/hebrew        # "he" is official language code of Hebrew.
    ka: Georgian/georgian
    ky: Kyrgyz/east_slavic
    lt: Lithuanian/qwerty
    lv: Latvian/qwerty
    mk: Macedonian/south_slavic
    ms: Malay/qwerty
    nb: Norwegian Bokmål/nordic
    nl: Dutch/qwerty
    nl_BE: Dutch Belgium/azerty
    pl: Polish/qwerty
    pt_BR: Portuguese Brazil/qwerty
    pt_PT: Portuguese Portugal/qwerty
    ro: Romanian/qwerty
    ru: Russian/east_slavic
    sk: Slovak/qwerty
    sl: Slovenian/qwerty
    sr: Serbian/south_slavic
    (sr-Latn: Serbian/qwerty) # not yet implemented.
    sv: Swedish/nordic
    sw: Swahili/qwerty
    th: Thai/thai
    tl: Tagalog/spanish
    tr: Turkish/qwerty
    uk: Ukrainian/east_slavic
    vi: Vietnamese/qwerty
    zu: Zulu/qwerty
    zz: QWERTY/qwerty
    -->
<!-- TODO: use <lang>_keyboard icon instead of a common keyboard icon. -->
<!-- Note: SupportTouchPositionCorrection extra value is obsolete and maintained for backward
     compatibility. -->
<!-- If IME doesn't have an applicable subtype, the first subtype will be used as a default
     subtype.-->
<input-method xmlns:android="http://schemas.android.com/apk/res/android"
        android:settingsActivity="com.diycircuits.inputmethod.latin.SettingsActivity"
        android:isDefault="@bool/im_is_default">
    <subtype android:icon="@drawable/ic_subtype_keyboard"
            android:label="@string/subtype_en_US"
            android:imeSubtypeLocale="en_US"
            android:imeSubtypeMode="keyboard"
            android:imeSubtypeExtraValue="TrySuppressingImeSwitcher,AsciiCapable,SupportTouchPositionCorrection"
    />
    <subtype android:icon="@drawable/ic_subtype_keyboard"
            android:label="@string/subtype_en_GB"
            android:imeSubtypeLocale="en_GB"
            android:imeSubtypeMode="keyboard"
            android:imeSubtypeExtraValue="TrySuppressingImeSwitcher,AsciiCapable,SupportTouchPositionCorrection"
    />
    <subtype android:icon="@drawable/ic_subtype_keyboard"
            android:label="@string/subtype_no_language_qwerty"
            android:imeSubtypeLocale="zz"
            android:imeSubtypeMode="keyboard"
            android:imeSubtypeExtraValue="KeyboardLayoutSet=qwerty,AsciiCapable,EnabledWhenDefaultIsNotAsciiCapable"
    />
</input-method>
